# teak

./: Cargo.toml  docker-compose.yaml
cmd/managedb/: Cargo.toml
cmd/managedb/src/: main.rs  populate.rs
teak-data/: Cargo.toml
teak-data/src/: tree.rs
teak-db/: Cargo.toml
teak-db/migrations/2023-09-01-214333_init_tree/: down.sql  up.sql
teak-db/src/: error.rs  lib.rs  schema.rs
teak-db/src/models/: tree.rs
teak-db/src/tree/: mod.rs
teak-server/: Cargo.toml
teak-web/: package-lock.json  package.json
