[package]
name = "teak-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
diesel = { version = "2.1.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["serde", "v8"] }
teak-data = { path = "../teak-data" }
thiserror = "1.0.47"
r2d2 = "0.8.10"
