[package]
name = "managedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
teak-db = { path = "../../teak-db" }
teak-data = { path = "../../teak-data" }
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v8", "v4"] }
chrono = "0.4.28"
